--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -1,204 +1,204 @@
-[Problem0001-Two Sum](2022-10-12-leetcode-problem-1.md)
+[Problem1-Two Sum](2022-10-12-leetcode-problem-1.md)
 
-[Problem0002-Add Two Numbers](2022-10-21-leetcode-problem-2.md)
+[Problem2-Add Two Numbers](2022-10-21-leetcode-problem-2.md)
 
-[Problem0003-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
+[Problem3-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
 
-[Problem0004-Median of Two Sorted Arrays](2022-11-07-leetcode-problem-4.md)
+[Problem4-Median of Two Sorted Arrays](2022-11-07-leetcode-problem-4.md)
 
-[Problem0005-Longest Palindromic Substring](2021-10-25-leetcode-problem-5.md)
+[Problem5-Longest Palindromic Substring](2021-10-25-leetcode-problem-5.md)
 
-[Problem0006-ZigZag Conversion](2021-11-01-leetcode-problem-6.md)
+[Problem6-ZigZag Conversion](2021-11-01-leetcode-problem-6.md)
 
-[Problem0007-Reverse Integer](2022-11-15-leetcode-problem-7.md)
+[Problem7-Reverse Integer](2022-11-15-leetcode-problem-7.md)
 
-[Problem0008-String to Integer](2021-11-02-leetcode-problem-8.md)
+[Problem8-String to Integer](2021-11-02-leetcode-problem-8.md)
 
-[Problem0009-Palindrome Number](2022-11-08-leetcode-problem-9.md)
+[Problem9-Palindrome Number](2022-11-08-leetcode-problem-9.md)
 
-[Problem0011-Container With Most Water](2021-11-03-leetcode-problem-11.md)
+[Problem11-Container With Most Water](2021-11-03-leetcode-problem-11.md)
 
-[Problem0012-Integer to Roman](2021-11-04-leetcode-problem-12.md)
+[Problem12-Integer to Roman](2021-11-04-leetcode-problem-12.md)
 
-[Problem0015-Three Sum](2021-11-22-leetcode-problem-15.md)
+[Problem15-Three Sum](2021-11-22-leetcode-problem-15.md)
 
-[Problem0016-Three Sum Closest](2021-11-23-leetcode-problem-16.md)
+[Problem16-Three Sum Closest](2021-11-23-leetcode-problem-16.md)
 
-[Problem0017-Letter Combinations of Phone Numbers](2021-11-16-leetcode-problem-17.md)
+[Problem17-Letter Combinations of Phone Numbers](2021-11-16-leetcode-problem-17.md)
 
-[Problem0018-Four Sum](2021-11-24-leetcode-problem-18.md)
+[Problem18-Four Sum](2021-11-24-leetcode-problem-18.md)
 
-[Problem0019-Remove Nth Node From End of List](2021-08-12-leetcode-problem-19.md)
+[Problem19-Remove Nth Node From End of List](2021-08-12-leetcode-problem-19.md)
 
-[Problem0021-Merge Two Sorted Lists](2021-09-09-leetcode-problem-21.md)
+[Problem21-Merge Two Sorted Lists](2021-09-09-leetcode-problem-21.md)
 
-[Problem0022-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
+[Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
 
-[Problem0033-Search in Rotated Sorted Array](2022-01-04-leetcode-problem-33.md)
+[Problem33-Search in Rotated Sorted Array](2022-01-04-leetcode-problem-33.md)
 
-[Problem0034-Find First and Last Position of Elements in Sorted Array](2021-11-25-leetcode-problem-34.md)
+[Problem34-Find First and Last Position of Elements in Sorted Array](2021-11-25-leetcode-problem-34.md)
 
-[Problem0035-Search Insert Position](2022-02-08-leetcode-problem-35.md)
+[Problem35-Search Insert Position](2022-02-08-leetcode-problem-35.md)
 
-[Problem0039-Combination Sum](2021-12-27-leetcode-problem-39.md)
+[Problem39-Combination Sum](2021-12-27-leetcode-problem-39.md)
 
-[Problem0040-Combination Sum](2022-04-22-leetcode-problem-40.md)
+[Problem40-Combination Sum](2022-04-22-leetcode-problem-40.md)
 
-[Problem0045-Jump Game](2022-05-07-leetcode-problem-45.md)
+[Problem45-Jump Game](2022-05-07-leetcode-problem-45.md)
 
-[Problem0046-Permutations](2021-09-14-leetcode-problem-46.md)
+[Problem46-Permutations](2021-09-14-leetcode-problem-46.md)
 
-[Problem0047-Permutations](2022-04-25-leetcode-problem-47.md)
+[Problem47-Permutations](2022-04-25-leetcode-problem-47.md)
 
-[Problem0055-Jump Game](2022-05-09-leetcode-problem-55.md)
+[Problem55-Jump Game](2022-05-09-leetcode-problem-55.md)
 
-[Problem0062-Unique Paths](2022-05-10-leetcode-problem-62.md)
+[Problem62-Unique Paths](2022-05-10-leetcode-problem-62.md)
 
-[Problem0070-Climbing Stairs](2021-10-14-leetcode-problem-70.md)
+[Problem70-Climbing Stairs](2021-10-14-leetcode-problem-70.md)
 
-[Problem0074-Search 2D Matrix](2022-01-05-leetcode-problem-74.md)
+[Problem74-Search 2D Matrix](2022-01-05-leetcode-problem-74.md)
 
-[Problem0077-Combinations](2021-09-13-leetcode-problem-77.md)
+[Problem77-Combinations](2021-09-13-leetcode-problem-77.md)
 
-[Problem0078-Subsets](2022-04-26-leetcode-problem-78.md)
+[Problem78-Subsets](2022-04-26-leetcode-problem-78.md)
 
-[Problem0079-Word Search](2022-04-28-leetcode-problem-79.md)
+[Problem79-Word Search](2022-04-28-leetcode-problem-79.md)
 
-[Problem0082-Remove Duplicates From Sorted List](2022-01-06-leetcode-problem-82.md)
+[Problem82-Remove Duplicates From Sorted List](2022-01-06-leetcode-problem-82.md)
 
-[Problem0083-Remove Duplicates From Sorted List](2021-12-20-leetcode-problem-83.md)
+[Problem83-Remove Duplicates From Sorted List](2021-12-20-leetcode-problem-83.md)
 
-[Problem0089-Gray Code](2021-05-25-leetcode-problem-89.md)
+[Problem89-Gray Code](2021-05-25-leetcode-problem-89.md)
 
-[Problem0090-Subsets](2022-04-29-leetcode-problem-90.md)
+[Problem90-Subsets](2022-04-29-leetcode-problem-90.md)
 
-[Problem0091-Decode Ways](2021-06-01-leetcode-problem-91.md)
+[Problem91-Decode Ways](2021-06-01-leetcode-problem-91.md)
 
-[Problem0092-Reverse Linked List](2021-06-04-leetcode-problem-92.md)
+[Problem92-Reverse Linked List](2021-06-04-leetcode-problem-92.md)
 
-[Problem0093-Restore IP Addresses](2021-06-10-leetcode-problem-93.md)
+[Problem93-Restore IP Addresses](2021-06-10-leetcode-problem-93.md)
 
-[Problem0095-Unique Binary Search Trees](2021-06-18-leetcode-problem-95.md)
+[Problem95-Unique Binary Search Trees](2021-06-18-leetcode-problem-95.md)
 
-[Problem0096-Unique Binary Search Trees](2021-06-15-leetcode-problem-96.md)
+[Problem96-Unique Binary Search Trees](2021-06-15-leetcode-problem-96.md)
 
-[Problem0097-Interleaving String](2021-06-29-leetcode-problem-97.md)
+[Problem97-Interleaving String](2021-06-29-leetcode-problem-97.md)
 
-[Problem0098-Validate Binary Search Tree](2021-07-06-leetcode-problem-98.md)
+[Problem98-Validate Binary Search Tree](2021-07-06-leetcode-problem-98.md)
 
-[Problem0099-Recover Binary Search Tree](2021-07-08-leetcode-problem-99.md)
+[Problem99-Recover Binary Search Tree](2021-07-08-leetcode-problem-99.md)
 
-[Problem0102-Binary Tree Level Order Traversal](2021-07-12-leetcode-problem-102.md)
+[Problem102-Binary Tree Level Order Traversal](2021-07-12-leetcode-problem-102.md)
 
-[Problem0103-Binary Tree Zigzag Level Order Traversal](2021-07-13-leetcode-problem-103.md)
+[Problem103-Binary Tree Zigzag Level Order Traversal](2021-07-13-leetcode-problem-103.md)
 
-[Problem0105-Construct Binary Tree from Preorder and Inorder Traversal](2021-07-15-leetcode-problem-105.md)
+[Problem105-Construct Binary Tree from Preorder and Inorder Traversal](2021-07-15-leetcode-problem-105.md)
 
-[Problem0106-Construct Binary Tree from Inorder and Postorder Traversal](2021-07-20-leetcode-problem-106.md)
+[Problem106-Construct Binary Tree from Inorder and Postorder Traversal](2021-07-20-leetcode-problem-106.md)
 
-[Problem0107-Binary Tree Level Order Traversal](2021-07-22-leetcode-problem-107.md)
+[Problem107-Binary Tree Level Order Traversal](2021-07-22-leetcode-problem-107.md)
 
-[Problem0113-Path Sum](2021-12-13-leetcode-problem-113.md)
+[Problem113-Path Sum](2021-12-13-leetcode-problem-113.md)
 
-[Problem0116-Populating Next Right Pointers in Each Node](2021-09-01-leetcode-problem-116.md)
+[Problem116-Populating Next Right Pointers in Each Node](2021-09-01-leetcode-problem-116.md)
 
-[Problem0117-Populating Next Right Pointers in Each Node](2021-12-15-leetcode-problem-117.md)
+[Problem117-Populating Next Right Pointers in Each Node](2021-12-15-leetcode-problem-117.md)
 
-[Problem0120-Triangle](2021-10-14-leetcode-problem-120.md)
+[Problem120-Triangle](2021-10-14-leetcode-problem-120.md)
 
-[Problem0125-Valid Palindrome](2022-11-09-leetcode-problem-125.md)
+[Problem125-Valid Palindrome](2022-11-09-leetcode-problem-125.md)
 
-[Problem0130-Surrounded Regions](2022-04-01-leetcode-problem-130.md)
+[Problem130-Surrounded Regions](2022-04-01-leetcode-problem-130.md)
 
-[Problem0136-Single Number](2021-10-19-leetcode-problem-136.md)
+[Problem136-Single Number](2021-10-19-leetcode-problem-136.md)
 
-[Problem0139-Word Break](2021-12-28-leetcode-problem-139.md)
+[Problem139-Word Break](2021-12-28-leetcode-problem-139.md)
 
-[Problem0142-Linked List Cycle](2021-12-06-leetcode-problem-142.md)
+[Problem142-Linked List Cycle](2021-12-06-leetcode-problem-142.md)
 
-[Problem0153-Find Minimum in Rotated Sorted Array](2021-12-09-leetcode-problem-153.md)
+[Problem153-Find Minimum in Rotated Sorted Array](2021-12-09-leetcode-problem-153.md)
 
-[Problem0162-Find Peak Element](2021-12-29-leetcode-problem-162.md)
+[Problem162-Find Peak Element](2021-12-29-leetcode-problem-162.md)
 
-[Problem0167-Two Sum](2021-08-06-leetcode-problem-167.md)
+[Problem167-Two Sum](2021-08-06-leetcode-problem-167.md)
 
-[Problem0187-Repeated DNA sequences](2021-12-08-leetcode-problem-187.md)
+[Problem187-Repeated DNA sequences](2021-12-08-leetcode-problem-187.md)
 
-[Problem0189-Rotate Array](2021-08-02-leetcode-problem-189.md)
+[Problem189-Rotate Array](2021-08-02-leetcode-problem-189.md)
 
-[Problem0190-Reverse Bits](2021-10-19-leetcode-problem-190.md)
+[Problem190-Reverse Bits](2021-10-19-leetcode-problem-190.md)
 
-[Problem0191-Number of 1 Bits](2021-10-15-leetcode-problem-191.md)
+[Problem191-Number of 1 Bits](2021-10-15-leetcode-problem-191.md)
 
-[Problem0198-House Robber](2021-10-15-leetcode-problem-198.md)
+[Problem198-House Robber](2021-10-15-leetcode-problem-198.md)
 
-[Problem0200-Number of Islands](2022-01-24-leetcode-problem-200.md)
+[Problem200-Number of Islands](2022-01-24-leetcode-problem-200.md)
 
-[Problem0206-Reverse Linked List](2021-09-10-leetcode-problem-206.md)
+[Problem206-Reverse Linked List](2021-09-10-leetcode-problem-206.md)
 
-[Problem0209-Minimum Size Subarray Sum](2022-01-17-leetcode-problem-209.md)
+[Problem209-Minimum Size Subarray Sum](2022-01-17-leetcode-problem-209.md)
 
-[Problem0231-Power of Two](2021-10-15-leetcode-problem-231.md)
+[Problem231-Power of Two](2021-10-15-leetcode-problem-231.md)
 
-[Problem0278-First Bad Version](2022-02-10-leetcode-problem-278.md)
+[Problem278-First Bad Version](2022-02-10-leetcode-problem-278.md)
 
-[Problem0283-Move Zeroes](2021-08-06-leetcode-problem-283.md)
+[Problem283-Move Zeroes](2021-08-06-leetcode-problem-283.md)
 
-[Problem0337-House Robber III](2023-09-18-leetcode-problem-337.md)
+[Problem337-House Robber III](2023-09-18-leetcode-problem-337.md)
 
-[Problem0344-Reverse String](2021-08-09-leetcode-problem-344.md)
+[Problem344-Reverse String](2021-08-09-leetcode-problem-344.md)
 
-[Problem0393-UTF8 Validation](2023-08-07-leetcode-problem-393.md)
+[Problem393-UTF8 Validation](2023-08-07-leetcode-problem-393.md)
 
-[Problem0401-Binary Watch](2021-12-23-leetcode-problem-401.md)
+[Problem401-Binary Watch](2021-12-23-leetcode-problem-401.md)
 
-[Problem0409-Longest Palindrome](2021-12-24-leetcode-problem-409.md)
+[Problem409-Longest Palindrome](2021-12-24-leetcode-problem-409.md)
 
-[Problem0415-Add Strings](2023-07-17-leetcode-problem-415.md)
+[Problem415-Add Strings](2023-07-17-leetcode-problem-415.md)
 
-[Problem0438-Find All Anagrams in String](2022-01-12-leetcode-problem-438.md)
+[Problem438-Find All Anagrams in String](2022-01-12-leetcode-problem-438.md)
 
-[Problem0445-Two Sum](2022-10-27-leetcode-problem-445.md)
+[Problem445-Two Sum](2022-10-27-leetcode-problem-445.md)
 
-[Problem0449-Serialize and Deserialize BST](2023-09-05-leetcode-problem-449.md)
+[Problem449-Serialize and Deserialize BST](2023-09-05-leetcode-problem-449.md)
 
-[Problem0542-01 Matrix](2021-09-08-leetcode-problem-542.md)
+[Problem542-01 Matrix](2021-09-08-leetcode-problem-542.md)
 
-[Problem0547-Number of Provines](2022-04-11-leetcode-problem-547.md)
+[Problem547-Number of Provines](2022-04-11-leetcode-problem-547.md)
 
-[Problem0557-Reverse Words In String](2021-08-10-leetcode-problem-557.md)
+[Problem557-Reverse Words In String](2021-08-10-leetcode-problem-557.md)
 
-[Problem0567-Permutation in String](2021-08-23-leetcode-problem-567.md)
+[Problem567-Permutation in String](2021-08-23-leetcode-problem-567.md)
 
-[Problem0572-Subtree of Another Tree](2022-04-12-leetcode-problem-572.md)
+[Problem572-Subtree of Another Tree](2022-04-12-leetcode-problem-572.md)
 
-[Problem0617-Merge Two Binary Trees](2021-09-01-leetcode-problem-617.md)
+[Problem617-Merge Two Binary Trees](2021-09-01-leetcode-problem-617.md)
 
-[Problem0695-Max Area of Island](2021-08-30-leetcode-problem-695.md)
+[Problem695-Max Area of Island](2021-08-30-leetcode-problem-695.md)
 
-[Problem0704-Binary Search](2022-02-10-leetcode-problem-704.md)
+[Problem704-Binary Search](2022-02-10-leetcode-problem-704.md)
 
-[Problem0713-Subarray Product Less Than K](2022-01-14-leetcode-problem-713.md)
+[Problem713-Subarray Product Less Than K](2022-01-14-leetcode-problem-713.md)
 
-[Problem0733-Flood Fill](2021-08-25-leetcode-problem-733.md)
+[Problem733-Flood Fill](2021-08-25-leetcode-problem-733.md)
 
-[Problem0767-Reorganize String](2022-11-28-leetcode-problem-767.md)
+[Problem767-Reorganize String](2022-11-28-leetcode-problem-767.md)
 
-[Problem0784-Letter Case Permutation](2022-05-05-leetcode-problem-784.md)
+[Problem784-Letter Case Permutation](2022-05-05-leetcode-problem-784.md)
 
-[Problem0797-All Paths From Source to Target](2022-04-14-leetcode-problem-797.md)
+[Problem797-All Paths From Source to Target](2022-04-14-leetcode-problem-797.md)
 
-[Problem0844-Backspace String Compare](2022-01-07-leetcode-problem-844.md)
+[Problem844-Backspace String Compare](2022-01-07-leetcode-problem-844.md)
 
-[Problem0846-Hand of Straights](2021-12-30-leetcode-problem-846.md)
+[Problem846-Hand of Straights](2021-12-30-leetcode-problem-846.md)
 
-[Problem0876-Middle of Linked List](2021-08-11-leetcode-problem-876.md)
+[Problem876-Middle of Linked List](2021-08-11-leetcode-problem-876.md)
 
-[Problem0977-Squares of Sorted Array](2021-07-29-leetcode-problem-977.md)
+[Problem977-Squares of Sorted Array](2021-07-29-leetcode-problem-977.md)
 
-[Problem0986-Interval List Intersections](2022-01-10-leetcode-problem-986.md)
+[Problem986-Interval List Intersections](2022-01-10-leetcode-problem-986.md)
 
-[Problem0994-Rotting Oranges](2021-09-08-leetcode-problem-994.md)
+[Problem994-Rotting Oranges](2021-09-08-leetcode-problem-994.md)
 
 [Problem1015-Smallest Integer Divisible by K](2023-05-10-leetcode-problem-1015.md)
 
