--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -12,6 +12,14 @@
 
 [Problem2-Add Two Numbers](2022-10-21-leetcode-problem-2.md)
 
+[Problem445-Two Sum](2022-10-27-leetcode-problem-445.md)
+
+[Problem415-Add Strings](2023-07-17-leetcode-problem-415.md)
+
+[Problem43-Multiply Strings](2023-10-16-leetcode-problem-43.md)
+
+---
+
 [Problem3-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
 
 [Problem4-Median of Two Sorted Arrays](2022-11-07-leetcode-problem-4.md)
@@ -156,11 +164,7 @@
 
 [Problem409-Longest Palindrome](2021-12-24-leetcode-problem-409.md)
 
-[Problem415-Add Strings](2023-07-17-leetcode-problem-415.md)
-
 [Problem438-Find All Anagrams in String](2022-01-12-leetcode-problem-438.md)
-
-[Problem445-Two Sum](2022-10-27-leetcode-problem-445.md)
 
 [Problem449-Serialize and Deserialize BST](2023-09-05-leetcode-problem-449.md)
 
