leetcode, problem 3 and similar questions, problem 5 and similar questions

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -22,17 +22,27 @@
 
 [Problem3-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
 
-[Problem4-Median of Two Sorted Arrays](2022-11-07-leetcode-problem-4.md)
+[Problem5-Longest Palindromic Substring](2021-10-25-leetcode-problem-5.md)
+
+---
 
 [Problem5-Longest Palindromic Substring](2021-10-25-leetcode-problem-5.md)
+
+[Problem9-Palindrome Number](2022-11-08-leetcode-problem-9.md)
+
+[Problem125-Valid Palindrome](2022-11-09-leetcode-problem-125.md)
+
+[Problem409-Longest Palindrome](2021-12-24-leetcode-problem-409.md)
+
+---
+
+[Problem4-Median of Two Sorted Arrays](2022-11-07-leetcode-problem-4.md)
 
 [Problem6-ZigZag Conversion](2021-11-01-leetcode-problem-6.md)
 
 [Problem7-Reverse Integer](2022-11-15-leetcode-problem-7.md)
 
 [Problem8-String to Integer](2021-11-02-leetcode-problem-8.md)
-
-[Problem9-Palindrome Number](2022-11-08-leetcode-problem-9.md)
 
 [Problem11-Container With Most Water](2021-11-03-leetcode-problem-11.md)
 
@@ -118,8 +128,6 @@
 
 [Problem120-Triangle](2021-10-14-leetcode-problem-120.md)
 
-[Problem125-Valid Palindrome](2022-11-09-leetcode-problem-125.md)
-
 [Problem130-Surrounded Regions](2022-04-01-leetcode-problem-130.md)
 
 [Problem136-Single Number](2021-10-19-leetcode-problem-136.md)
@@ -161,8 +169,6 @@
 [Problem393-UTF8 Validation](2023-08-07-leetcode-problem-393.md)
 
 [Problem401-Binary Watch](2021-12-23-leetcode-problem-401.md)
-
-[Problem409-Longest Palindrome](2021-12-24-leetcode-problem-409.md)
 
 [Problem438-Find All Anagrams in String](2022-01-12-leetcode-problem-438.md)
 
